--- a/src/eracorddesktop/AdminDesk.form
+++ b/src/eracorddesktop/AdminDesk.form
@@ -174,6 +174,7 @@
       <SubComponents>
         <Component class="javax.swing.JTextField" name="jTextField2">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField2ActionPerformed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextField2KeyReleased"/>
           </Events>
         </Component>
@@ -296,18 +297,18 @@
                               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                               <Component id="jLabel10" min="-2" pref="24" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jLabel11" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel17" alignment="0" min="-2" pref="24" max="-2" attributes="0"/>
+                                  <Component id="jLabel11" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jLabel12" alignment="0" min="-2" pref="24" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel15" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                                       <Component id="jLabel9" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                                      <Component id="jLabel12" alignment="0" min="-2" pref="24" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jLabel18" max="32767" attributes="0"/>
                               </Group>
